tweaked example page

--- a/example.html
+++ b/example.html
@@ -13,8 +13,10 @@
             padding: 0 1em;
             border-right: 1px solid #333;
         }
+        .content {
+            margin-top: 100px;   
+        }    
         h1 {
-            padding-top:100px;
             min-height: 1000px;
             border-left: 10px dashed #eee;
         }    
@@ -28,12 +30,13 @@
     <li><a href="#thing-three">Thing Three</a></li>
     <li><a href="#and-more">And More</a></li>
 </ul>
-
-<!-- the link targets -->    
-<h1 id="thing-one">Thing One</h1>
-<h1 id="thing-two">Thing Two</h1>
-<h1 id="thing-three">Thing Three</h1>
-<h1 id="and-more">And More</h1>
+<div class="content">
+    <!-- the link targets -->    
+    <h1 id="thing-one">Thing One</h1>
+    <h1 id="thing-two">Thing Two</h1>
+    <h1 id="thing-three">Thing Three</h1>
+    <h1 id="and-more">And More</h1>
+</div>
     
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="sp-nav.js"></script>   
